初始化我的配置

--- a/llpp.conf
+++ b/llpp.conf
@@ -62,21 +62,21 @@
     coarse-presentation-positioning='false'
     use-document-css='true'>
 <keymap mode='global'>
-<map in='ctrl-u' out='pgup'/>
-<map in='ctrl-e' out='pgdown'/>
+<map in='ctrl-k' out='pgup'/>
+<map in='ctrl-j' out='pgdown'/>
 </keymap>
 <keymap mode='outline'>
 <map in='tab' out='esc'/>
 </keymap>
 <keymap mode='view'>
 <map in='tab' out='o'/>
-<map in='ctrl-u' out='pgup'/>
-<map in='u' out='up'/>
+<map in='ctrl-k' out='pgup'/>
+<map in='k' out='up'/>
 <map in='s' out='b'/>
-<map in='n' out='left'/>
-<map in='ctrl-e' out='pgdown'/>
-<map in='i' out='right'/>
-<map in='e' out='down'/>
+<map in='h' out='left'/>
+<map in='ctrl-j' out='pgdown'/>
+<map in='l' out='right'/>
+<map in='j' out='down'/>
 </keymap>
 </defaults>
 </llppconfig>
