--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -315,7 +315,7 @@ map ` set viewmode!
 
 map <c-e> scroll_preview 5
 map <c-u> scroll_preview -5
-#map ? help
+map ? help
 map W display_log
 map w taskview_open
 map S shell $SHELL
@@ -333,7 +333,7 @@ map mt linemode metatitle
 map <Space> mark_files toggle=True
 map v       mark_files all=True toggle=True
 map <c-v>   toggle_visual_mode
-map lv      toggle_visual_mode reverse=True
+map uv      toggle_visual_mode reverse=True
 
 map <C-c> abort
 map w taskview_open
@@ -355,16 +355,15 @@ map <c-g> shell lazygit
 # locations
 map gh cd ~
 map gi cd ~/Github
+map gl cd ~/Leetcode
 map gd cd ~/Desktop
 map gD cd ~/Downloads
 map gfa cd ~/.config/alacritty
 map gff cd ~/.config
 map gfr cd ~/.config/ranger
-map gfb cd ~/.config/bin
 map gfn cd ~/.config/nvim
 map gfm cd ~/.config/mutt
 map gfz cd ~/.config/zsh
-map gft cd ~/.config/tmux
 map gfl cd ~/.config/jesseduffield/lazygit/
 map gfd cd ~/prog/dwm/
 map gfs cd ~/prog/st/
@@ -384,7 +383,7 @@ map gM cd /mnt
 map gG cd ~/go/src
 map gp cd ~/prog
 map gw cd ~/Pictures/wallpapers
-source ~/.sconfig/ranger/rc.conf
+#source ~/.sconfig/ranger/rc.conf
 
 
 # In case you work on a keyboard with dvorak layout
@@ -402,14 +401,14 @@ map <INSERT>   console touch%space
 
 
 # VIM-like
-copymap <UP>       u
-copymap <DOWN>     e
-copymap <LEFT>     n
-copymap <RIGHT>    i
+copymap <UP>       k
+copymap <DOWN>     j
+copymap <LEFT>     h
+copymap <RIGHT>    l
 copymap <HOME>     gg
 copymap <END>      G
-map E move down=5
-map U move up=5
+map J move down=5
+map K move up=5
 #copymap <PAGEDOWN> <C-E>
 #copymap <PAGEUP>   <C-U>
 
@@ -436,7 +435,7 @@ map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.
 #map cW console bulkrename
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
-map k  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
+#map k  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
 
 map pp paste
 map po paste overwrite=True
@@ -450,13 +449,13 @@ map pht paste_hardlinked_subtree
 map dD console delete
 
 map dd cut
-map ld uncut
+map ud uncut
 map da cut mode=add
 map dr cut mode=remove
 map dt cut mode=toggle
 
 map yy copy
-map ly uncut
+map uy uncut
 map ya copy mode=add
 map yr copy mode=remove
 map yt copy mode=toggle
@@ -481,7 +480,7 @@ map f console scout -ftsea%space
 map tu     tab_new
 map ti     tab_move 1
 map tn   tab_move -1
-map lq        tab_restore
+map uq        tab_restore
 map tmi     tab_shift 1
 map tmn     tab_shift -1
 
